--- a/index.html
+++ b/index.html
@@ -2,24 +2,62 @@
 <html>
 <head>
   <title>Aymard Asset Recovery — Total Recovered</title>
+
+  <!-- Eurostile (closest to Bank Gothic) -->
+  <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;700&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Oxanium', sans-serif;
       text-align: center;
-      padding-top: 80px;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding-top: 60px;
     }
+
+    /* Header box */
+    .header-box {
+      background-color: #111;
+      color: white;
+      padding: 20px 0;
+      width: 100%;
+      font-size: 28px;
+      font-weight: 700;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      position: fixed;
+      top: 0;
+      left: 0;
+    }
+
+    /* Main title */
     h1 {
-      font-size: 32px;
-      margin-bottom: 20px;
+      font-size: 30px;
+      font-weight: 600;
+      margin-top: 40px;
+      color: #222;
     }
+
+    /* Main total text */
     p {
-      font-size: 48px;
+      font-size: 52px;
       font-weight: bold;
+      margin-top: 20px;
+      color: #000;
     }
   </style>
 </head>
+
 <body>
-  <h1>Total Funds Recovered for Clients</h1>
+
+  <!-- Header -->
+  <div class="header-box">
+    Aymard Asset Recovery
+  </div>
+
+  <h1>So far, I've helped my clients claim...</h1>
   <p>$0</p>
+
 </body>
 </html>
