--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 <body>
 
   <!-- Header -->
-  <div class="header-box">
-    Aymard Asset Recovery
+ <img src="https://github.com/aymardrecovery/aymardrecovery.github.io/blob/main/AYMARD%20ASSET%20RECOVERY.png" alt="Aymard Asset Recovery" style="width:250px; margin-top:20px;">
   </div>
 
   <h1>So far, I've helped my clients claim...</h1>
