--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 <body>
 
   <!-- Header -->
- <img src="https://github.com/aymardrecovery/aymardrecovery.github.io/blob/main/AYMARD%20ASSET%20RECOVERY.png" alt="Aymard Asset Recovery" style="width:250px; margin-top:20px;">
+ <img src="https://github.com/aymardrecovery/aymardrecovery.github.io/blob/main/AYMARD%20ASSET%20RECOVERY.png" 
+   alt="Aymard Asset Recovery" 
+   style="width:250px; margin-top:20px;">
   </div>
 
   <h1>So far, I've helped my clients claim...</h1>
